--- a/1 - Fundamentos/3 - Introdução à HTML e CSS/2 - HTML & CSS - Primeiros passos em CSS/exercicios/3.2/style.css
+++ b/1 - Fundamentos/3 - Introdução à HTML e CSS/2 - HTML & CSS - Primeiros passos em CSS/exercicios/3.2/style.css
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="UTF-8">
-    <title>CSS Básico</title>
-    <!-- 1 - Coloque todo o CSS criado até agora nos exercícios anteriores em um arquivo externo. -->
-    <link rel="stylesheet" type="text/css" href="style.css">  
-    <!-- <style>
+<style>
       h1{
         /* font-size: 65px;
         color: orange; */
@@ -42,15 +35,4 @@
         background-color: brown;
       }
 
-    </style> -->
-  </head>
-  <body>
-    <h1>Exercícios 3.2</h1>
-    <p>Qual é a sua cor favorita?</p>
-    <ul class="list-style">
-      <li id="Amarelo">Amarelo</li>
-      <li id="Vermelho">Vermelho</li>
-      <li id="Marrom">Marrom</li>
-    </ul>
-  </body>
-</html>
+    </style>
